# repliclust

./: .buildinfo  .gitignore  CNAME  LICENSE.txt  README.md  base.html  basic_usage.html  distributions.html  generating_multiple_datasets.html  genindex.html  index.html  install.html  maxmin.html  objects.inv  overlap.html  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  source_code.html  specifying_an_archetype.html  user_guide.html
.doctrees/: base.doctree  basic_usage.doctree  distributions.doctree  environment.pickle  generating_multiple_datasets.doctree  index.doctree  install.doctree  maxmin.doctree  overlap.doctree  reference.doctree  source_code.doctree  specifying_an_archetype.doctree  user_guide.doctree
.github/workflows/: requirements.txt  sphinx.yml  test.yml  tests.yml
_sources/: base.rst.txt  index.rst.txt  maxmin.rst.txt  specifying_an_archetype.rst.txt
docs/: requirements.txt
docs/source/: basic_usage.rst  conf.py  distributions.rst  generating_multiple_datasets.rst  index.rst  overlap.rst  reference.rst  repliclust.maxmin.rst  source_code.rst  specifying_an_archetype.rst  user_guide.rst
repliclust/: __init__.py  base.py  config.py  distributions.py  random_centers.py  utils.py
repliclust/maxmin/: __init__.py  archetype.py  blueprint.py  covariance.py  groupsizes.py  utils.py
repliclust/overlap/: _gradients.py  _gradients_marginal.py  _gradients_marginal_lda.py  centers.py  centers_old.py
tests/: test_base.py  test_distributions.py  test_random_centers.py  test_utils.py
tests/constrained_overlap/: test_centers.py  test_gradients.py
tests/maxmin/: test_maxmin_archetype.py  test_maxmin_blueprint.py  test_maxmin_covariance.py  test_maxmin_groupsizes.py  test_maxmin_utils.py
tests/overlap/: test_centers.py  test_gradients.py  (+2 more)
(+31 files in other folders)
