[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repliclust"
version = "0.0.1"
authors = [
  { name="Michael Zellinger", email="michael_zellinger@alumni.brown.edu" },
]
description = "Reproducibly generate synthetic data with clusters."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"